src/objects/Contact 2.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <description>Captures the record type of the associated account in a text field. Used for sharing rules on the contact object.</description>
        <label>Account Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_VIEWS_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIEWS User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Federation_Id__c</fullName>
        <description>Added in order to identify a contact for the CareNow community.</description>
        <label>Federation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inactive Contact</description>
        <inlineHelpText>If the individual has left their current organization then check the box and create a new contact for the new organization. Do not delete the contact or change the organization as this could delete their history.</inlineHelpText>
        <label>Inactive Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Finds USER ID from Users Standard object, can be used later in formulas.</description>
        <label>User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>